src/test/rustdoc-ui/check-fail.stderr
error: missing documentation for the crate
  --> $DIR/check-fail.rs:3:1
   |
LL | / #![deny(missing_docs)]
LL | |
LL | |
LL | | #![deny(rustdoc)]
LL | |
LL | | pub fn foo() {}
   | |_______________^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:3:9
   |
LL | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^

error: missing documentation for a function
  --> $DIR/check-fail.rs:8:1
   |
LL | pub fn foo() {}
   | ^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/check-fail.rs:3:1
   |
LL | / #![deny(missing_docs)]
LL | |
LL | |
LL | | #![deny(rustdoc)]
LL | |
LL | | pub fn foo() {}
   | |_______________^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:6:9
   |
LL | #![deny(rustdoc)]
   |         ^^^^^^^
   = note: `#[deny(missing_doc_code_examples)]` implied by `#[deny(rustdoc)]`

error: missing code example in this documentation
  --> $DIR/check-fail.rs:8:1
   |
LL | pub fn foo() {}
   | ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

